feat: all sorta changes
- renamed file.typ to src/blank.typ
- added a build system
- added a pre-commit config
- updated documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,3 +5,14 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: local
+    hooks:
+      - id: typstyle
+        name: typstyle
+        description: Format files with typstyle
+        entry: typstyle
+        language: rust
+        types: [file]
+        additional_dependencies: ["cli:typstyle:0.12.14"]
+        files: \.typ$
+        args: [-i]
