--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,14 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.7.4"
+    hooks:
+      - id: ruff-format
+  - repo: https://github.com/PyCQA/isort
+    rev: "5.13.2"
+    hooks:
+      - id: isort
   - repo: local
     hooks:
       - id: typstyle
@@ -16,3 +24,21 @@ repos:
         additional_dependencies: ["cli:typstyle:0.12.14"]
         files: \.typ$
         args: [-i]
+      - id: pyright
+        name: pyright
+        description: "Python command line wrapper for pyright, a static type checker"
+        entry: basedpyright
+        language: python
+        types_or: [python]
+        require_serial: true
+        minimum_pre_commit_version: "2.9.2"
+        additional_dependencies:
+          - "basedpyright>=1.23.1"
+      - id: prettier
+        name: prettier
+        entry: prettier -w --
+        types_or: ["yaml", "json", "markdown"]
+        description: Format files with prettier
+        language: node
+        additional_dependencies:
+          - "prettier@^3.4.2"
